通知选人、发送短信

--- a/wisdomCampus/html/checkNotice/new_message.html
+++ b/wisdomCampus/html/checkNotice/new_message.html
@@ -78,7 +78,7 @@
 		</header>
 		<div id="message" class="mui-content">
 			<!--<template>-->
-				<template v-show="dataFlag>0">
+			<template v-show="dataFlag>0">
 				<div class="weui-cells" style="margin-top: 0px;">
 					<div class="weui-cell">
 						<div class="weui-cell__hd">标题</div>
@@ -93,14 +93,14 @@
 						</div>
 					</div>
 				</div>
-			<!--</template>-->
-			<div id="MultiMedia">
-				<div class="mui-input-row mui-checkbox mui-left" id="senMSN" style="float: right;margin-top: 3px;display: none;">
-					<label style="font-size: 14px;color: #333333;">发送短信</label>
-					<input v-model="smsSync" name="checkbox1" type="checkbox">
+				<!--</template>-->
+				<div id="MultiMedia">
+					<div class="mui-input-row mui-checkbox mui-left" id="senMSN" style="float: right;margin-top: 3px;display: none;">
+						<label style="font-size: 14px;color: #333333;">发送短信</label>
+						<input v-model="smsSync" name="checkbox1" type="checkbox">
+					</div>
 				</div>
-			</div>
-			<!--<template v-if="dataFlag>0">-->
+				<!--<template v-if="dataFlag>0">-->
 				<div class="weui-cells" style="margin-top: 0px;">
 					<div @click="selectPepole()" class="weui-cell weui-cell_access">
 						<div class="weui-cell__bd">
@@ -369,10 +369,14 @@
 				var codes = [];
 				var names = [];
 				var pics = [];
+				var mobiles = [];
 				for(var i = 0; i < selectPeople_arr.length; i++) {
 					var model = selectPeople_arr[i];
 					ids.push(model.utid)
 					codes.push('""');
+					if(model.mobile&&model.mobile.length > 0) {
+						mobiles.push(model.mobile);
+					}
 					names.push('"' + model.utname + '"');
 					//							pics.push('"' + model.imgurl + '"');
 					if(model.imgurl == null) {
@@ -407,9 +411,15 @@
 					events.closeWaiting();
 					console.log(JSON.stringify(data))
 					if(data.RspCode == 0) {
-
+						if(mobiles.length > 0&&smsSync == 1) {
+							var tempMobiles = mobiles.join(',').toString();
+							events.SendSmsForMobiles(tempMobiles, message.content);
+						}
 						mui.toast("发布成功")
-						mui.back();
+						setTimeout(function() {
+							mui.back();
+						}, 1000);
+
 					} else {
 						mui.toast(data.RspTxt)
 						sendFlag = 0;
@@ -540,7 +550,7 @@
 						taskCreate(wd);
 					} else {
 						//						console.log('### ERROR ### 获取上传凭证失败 ### ');
-//						document.getElementById("finish").disabled = false;
+						//						document.getElementById("finish").disabled = false;
 						wd.close();
 						mui.toast('上传失败 ' + data.message);
 					}
@@ -679,7 +689,7 @@
 								}
 							} else {
 								//console.log('### ERROR ### 上传失败 ### ' + status + ' ' + JSON.stringify(upload));
-//								document.getElementById("finish").disabled = false;
+								//								document.getElementById("finish").disabled = false;
 								mui.toast('上传失败 ' + status + ' ' + upload.responseText);
 								if(pathList.length != 0) {
 									BatchDelete(pathList, wd);
