--- a/wisdomCampus/html/signIn/signInIndex1.html
+++ b/wisdomCampus/html/signIn/signInIndex1.html
@@ -228,6 +228,7 @@
 		<script type="text/javascript" src="../../js/utils/showvideoutil.js"></script>
 		<script type="text/javascript" src="../../js/utils/showaudio.js"></script>
 		<script type="text/javascript" src="../../js/utils/gallerypick.js"></script>
+		<script type="text/javascript" src="../../js/utils/permissionChecker.js"></script>
 
 		<script type="text/javascript">
 			var uptokenData;
@@ -247,7 +248,7 @@
 
 				}
 			});
-
+			
 			document.getElementById('position111').addEventListener('tap', function() {
 				utils.mOpenWithData("../../html/signIn/atterecords.html", 'id');
 			});
@@ -279,6 +280,11 @@
 					PictureTuke: false //不显示从相册选图
 				});
 			mui.plusReady(function() {
+				plus.permissionChecker.isLocationEnabled(function( result ) {
+					console.log("result>>>>>>"+result[0]);
+				},function(result){
+					console.log('未知错误：'+result);
+				});
 				personal = store.get(window.storageKeyName.PERSONALINFO);
 				console.log('personal:' + JSON.stringify(personal));
 				if(plus.networkinfo.getCurrentType() == plus.networkinfo.CONNECTION_NONE) {
