发送通知时，imgurl中有反斜杠，导致错误

--- a/wisdomCampus/html/checkNotice/new-check.html
+++ b/wisdomCampus/html/checkNotice/new-check.html
@@ -206,7 +206,7 @@
 					TotalVideo: 1, //视频的个数
 				});
 				//显示发送短信按钮
-				document.getElementById('senMSN').style.display = 'inherit';
+//				document.getElementById('senMSN').style.display = 'inherit';
 
 			/*
 			 * 初始化控件
