--- a/wisdomCampus/html/studentManage/student-reviewClass.html
+++ b/wisdomCampus/html/studentManage/student-reviewClass.html
@@ -1,205 +1,245 @@
 <!doctype html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <link href="../../css/mui.min.css" rel="stylesheet" />
-    <style>
-        .pTitle {
-            color: black;
-            font-size: 15px;
-            text-align: center;
-            margin-top: 10px;
-        }
+	<head>
+		<meta charset="utf-8">
+		<title></title>
+		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<style>
+			.pTitle {
+				color: black;
+				font-size: 15px;
+				text-align: center;
+				margin-top: 10px;
+			}
+			
+			.pTime {
+				color: gray;
+				font-size: 13px;
+				text-align: center;
+			}
+			
+			.chart {
+				height: 200px;
+				margin: 0px;
+				padding: 0px;
+			}
+			
+			h5 {
+				margin-top: 30px;
+				font-weight: bold;
+			}
+			
+			h5:first-child {
+				margin-top: 15px;
+			}
+			
+			.p_left {
+				display: inline;
+				font-size: 18px;
+				color: #00A5E0;
+			}
+			
+			.p_right {
+				display: inline;
+			}
+		</style>
+	</head>
 
-        .pTime {
-            color: gray;
-            font-size: 13px;
-            text-align: center;
-        }
+	<body style="background: white;">
+		<header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;">
+			<a class="mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
+			<h1 class="mui-title" style="color: white;">学生考评分析</h1>
+		</header>
+		<div class="mui-content" style="background: white;">
+			<p class="pTitle">五年级1801班2018年春季学期学生行为量化考核</p>
+			<p class="pTime">量化时间:2018-6-20至2018-6-27</p>
+			<div class="mui-content-padded">
+				<a>
+					<p class="mui-pull-left">| 行为趋势</p>
+					<p class="mui-pull-right">请假 ></p>
+				</a>
+				<div class="chart" id="lineChart"></div>
+				<h5>| 量化总评</h5>
+				<!--<p class="mui-pull-right" style="margin-top: -20px;">请假 ></p>-->
+				<img class="mui-pull-right" style="margin-top: -20px;width: 35px;height: 35px;" src="../../img/firstPage/firstPage5.png" />
+				<div style="text-align: center;">
+					<p class="p_left">80分</p>
+					<p class="p_right">/良好</p>
+				</div>
+				<a style="margin-top: 50px;">
+					<div style="margin-left: 20%;display: inline;margin-top: 20px;">
+						<p class="p_right">最高:</p>
+						<p class="p_left">/112分</p>
+					</div>
+					<div style="margin-left: 25%;display: inline;">
+						<p class="p_right">最低:</p>
+						<p class="p_left">/30分</p>
+					</div>
+				</a>
+				<h5>| 等级信息</h5>
+				<div class="chart" id="pieChart"></div>
+			</div>
+			<ul class="mui-table-view">
+				<li class="mui-table-view-cell mui-media">
+					<a class="mui-navigate-right">
+						<img class="mui-media-object mui-pull-left" src="http://placehold.it/40x30">
+						<div class="mui-media-body">
+							<p class="mui-pull-left" style="margin-top: 10px;">王大陆</p>
+							<p class="mui-pull-right" style="margin-top: 10px;margin-right: 30px;">80分/良好</p>
+						</div>
+					</a>
+				</li>
+				<li class="mui-table-view-cell mui-media">
+					<a class="mui-navigate-right">
+						<img class="mui-media-object mui-pull-left" src="http://placehold.it/40x30">
+						<div class="mui-media-body">
+							<p class="mui-pull-left" style="margin-top: 10px;">王小陆</p>
+							<p class="mui-pull-right" style="margin-top: 10px;margin-right: 30px;">80分/良好</p>
+						</div>
+					</a>
+				</li>
+			</ul>
+		</div>
+		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/vue.min.js"></script>
+		<script src='../../js/lib/vconsole/vconsole.min.js'></script>
+		<script src="../../js/publicProtocol.js"></script>
+		<script src="../../js/utils/store.js"></script>
+		<script src="../../js/utils/storageKeyName.js"></script>
+		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/publicProtocol.js"></script>
+		<script src="../../js/utils/utils.js"></script>
+		<script src="../../js/lib/jquery.js"></script>
+		<script src="../../js/mui.js"></script>
+		<script src="../../js/echarts-all.js"></script>
+		<script type="text/javascript">
+			mui.init()
+			// 指定图表的配置项和数据
+			var pieoption = {
+				legend: {
+					orient: 'vertical',
+					x: 'left',
+					data: ['直接访问', '邮件营销', '联盟广告', '视频广告', '搜索引擎']
+				},
+				series: [{
+					name: '访问来源',
+					type: 'pie',
+					//饼状图
+					// radius: ['50%', '70%'],
+					avoidLabelOverlap: false,
+					//标签
+					label: {
+						normal: {
+							show: false,
+							position: 'inside',
+							formatter: '{d}%', //模板变量有 {a}、{b}、{c}、{d}，分别表示系列名，数据名，数据值，百分比。{d}数据会根据value值计算百分比
 
-        .chart {
-            height: 200px;
-            margin: 0px;
-            padding: 0px;
-        }
-
-        h5 {
-            margin-top: 30px;
-            font-weight: bold;
-        }
-
-        h5:first-child {
-            margin-top: 15px;
-        }
-
-        .p_left {
-            display: inline;
-            font-size: 18px;
-            color: #00A5E0;
-        }
-
-        .p_right {
-            display: inline;
-        }
-    </style>
-</head>
-
-<body>
-    <header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;">
-        <a class="mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
-        <h1 class="mui-title" style="color: white;">学生考评分析</h1>
-    </header>
-    <div class="mui-content">
-        <p class="pTitle">五年级1801班2018年春季学期学生行为量化考核</p>
-        <p class="pTime">量化时间:2018-6-20至2018-6-27</p>
-        <div class="mui-content-padded">
-            <a>
-                <p class="mui-pull-left">| 行为趋势</p>
-                <p class="mui-pull-right">请假 ></p>
-            </a>
-            <div class="chart" id="lineChart"></div>
-            <h5>| 量化总评</h5>
-            <!--<p class="mui-pull-right" style="margin-top: -20px;">请假 ></p>-->
-            <img class="mui-pull-right" style="margin-top: -20px;width: 35px;height: 35px;" src="../../img/firstPage/firstPage5.png"
-            />
-            <div style="text-align: center;">
-                <p class="p_left">80分</p>
-                <p class="p_right">/良好</p>
-            </div>
-            <a style="margin-top: 50px;">
-                <div style="margin-left: 20%;display: inline;margin-top: 20px;">
-                    <p class="p_right">最高:</p>
-                    <p class="p_left">/112分</p>
-                </div>
-                <div style="margin-left: 25%;display: inline;">
-                    <p class="p_right">最低:</p>
-                    <p class="p_left">/30分</p>
-                </div>
-            </a>
-            <h5>| 等级信息</h5>
-            <div class="chart" id="pieChart"></div>
-            <ul class="mui-table-view" style="">
-                <li class="mui-table-view-cell">
-                    <a>
-                        <p class="mui-pull-left">上课打架</p>
-                        <p class="mui-pull-right">-8分</p>
-                        <p style="margin-left: 40%;">4次</p>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <script src="../../js/mui.min.js"></script>
-    <script src="../../js/vue.min.js"></script>
-    <script src='../../js/lib/vconsole/vconsole.min.js'></script>
-    <script src="../../js/publicProtocol.js"></script>
-    <script src="../../js/utils/store.js"></script>
-    <script src="../../js/utils/storageKeyName.js"></script>
-    <script src="../../js/utils/events.js"></script>
-    <script src="../../js/publicProtocol.js"></script>
-    <script src="../../js/utils/utils.js"></script>
-    <script src="../../js/lib/jquery.js"></script>
-    <script src="../../js/mui.js"></script>
-    <script src="../../js/echarts-all.js"></script>
-    <script type="text/javascript">
-        mui.init()
-        var getOption = function (chartType) {
-            var chartOption = chartType == 'pie' ? {
-                calculable: false,
-                series: [{
-                    name: '访问来源',
-                    type: 'pie',
-                    radius: '65%',
-                    center: ['50%', '50%'],
-                    data: [{
-                        value: 335,
-                        name: '直接访问'
-                    }, {
-                        value: 310,
-                        name: '邮件营销'
-                    }, {
-                        value: 234,
-                        name: '联盟广告'
-                    }, {
-                        value: 135,
-                        name: '视频广告'
-                    }, {
-                        value: 1548,
-                        name: '搜索引擎'
-                    }]
-                }]
-            } : {
-                grid: {
-                    x: 35, //到左侧的距离
-                    x2: 10, //到右侧的距离
-                    y: 30, //到上面的距离
-                    y2: 55 //到下面的距离
-                },
-                toolbox: {
-                    show: false, //默认值为true，是否显示工具栏组件
-                    //各工具配置项。
-                    feature: {
-                        //辅助线标志 
-                        mark: {
-                            show: true
-                        },
-                        //数据视图工具，可以展现当前图表所用的数据，编辑后可以动态更新。show->是否显示该工具，readOnly->是否不可编辑，optionToContent->自定义 dataView 展现函数，用以取代默认的 textarea 使用更丰富的数据编辑。可以返回 dom 对象或者 html 字符串，backgroundColor->数据视图浮层背景色。
-                        dataView: {
-                            show: true,
-                            readOnly: false
-                        },
-                        //动态类型切换。show->是否显示该工具，type->这是个数组，启用的动态类型，包括'line'（切换为折线图）, 'bar'（切换为柱状图）, 'stack'（切换为堆叠模式）, 'tiled'（切换为平铺模式）。 
-                        magicType: {
-                            show: true,
-                            type: ['line']
-                        },
-                        //配置项还原。主要属性是show->是否显示该工具。 
-                        restore: {
-                            show: true
-                        },
-                        //这个工具可以把图表保存为图片。里面有些常用的参数，type->保存图片的格式，name->保存文件的名字，backgroundColor->保存图片的背景色，show->是否显示该工具 
-                        saveAsImage: {
-                            show: true
-                        }
-                    }
-                },
-                //是否启用拖拽重计算特性，默认关闭(即值为false) 
-                calculable: false,
-                //直角坐标系中横轴数组，数组中每一项代表一条横轴坐标轴，仅有一条时可省略数值    
-                //横轴通常为类目型，但条形图时则横轴为数值型，散点图时则横纵均为数值型
-                xAxis: [{
-                    type: 'category', //坐标轴类型，横轴默认为类目型'category'
-                    data: ['1月', '2月', '3月', '4月', '5月', '6月', '7月'] //类目型坐标轴文本标签数组，指定label内容。 数组项通常为文本，'\n'指定换行
-                }],
-                //直角坐标系中纵轴数组，数组中每一项代表一条纵轴坐标轴，仅有一条时可省略数值    
-                //纵轴通常为数值型，但条形图时则纵轴为类目型 
-                yAxis: [{
-                    type: 'value', //坐标轴类型，纵轴默认为数值型'value'
-                    splitArea: { //分隔区域，默认不显示
-                        show: true
-                    }
-                }],
-                //sereis的数据: 用于设置图表数据之用。series是一个对象嵌套的结构；对象内包含对象
-                series: [{
-                    name: '蒸发量', //系列名称，如果启用legend，该值将被legend.data索引相关
-                    type: chartType, //图表类型，必要参数！如为空或不支持类型，则该系列数据不被显示。
-                    data: [2.0, 4.9, 7.0, 23.2, 25.6, 76.7, 135.6] //系列中的数据内容数组，折线图以及柱状图时数组长度等于所使用类目轴文本标签数组axis.data的长度，并且他们间是一一对应的。数组项通常为数值 
-                }]
-            };
-            return chartOption;
-        };
-        var byId = function (id) {
-            return document.getElementById(id);
-        };
-        var lineChart = echarts.init(byId('lineChart'));
-        // 使用刚指定的配置项和数据显示图表。
-        lineChart.setOption(getOption('line'));
-		var pieChart = echarts.init(byId('pieChart'));
-		pieChart.setOption(getOption('pie'));
-    </script>
-</body>
+							textStyle: {
+								align: 'center',
+								baseline: 'middle',
+								fontFamily: '微软雅黑',
+								fontSize: 15,
+								fontWeight: 'bolder'
+							}
+						},
+					},
+					data: [{
+							value: 335,
+							name: '直接访问'
+						},
+						{
+							value: 310,
+							name: '邮件营销'
+						},
+						{
+							value: 234,
+							name: '联盟广告'
+						},
+						{
+							value: 135,
+							name: '视频广告'
+						},
+						{
+							value: 1548,
+							name: '搜索引擎'
+						}
+					]
+				}]
+			};
+			var getOption = function(chartType) {
+				var chartOption = chartType = {
+					grid: {
+						x: 35, //到左侧的距离
+						x2: 10, //到右侧的距离
+						y: 30, //到上面的距离
+						y2: 55 //到下面的距离
+					},
+					toolbox: {
+						show: false, //默认值为true，是否显示工具栏组件
+						//各工具配置项。
+						feature: {
+							//辅助线标志 
+							mark: {
+								show: true
+							},
+							//数据视图工具，可以展现当前图表所用的数据，编辑后可以动态更新。show->是否显示该工具，readOnly->是否不可编辑，optionToContent->自定义 dataView 展现函数，用以取代默认的 textarea 使用更丰富的数据编辑。可以返回 dom 对象或者 html 字符串，backgroundColor->数据视图浮层背景色。
+							dataView: {
+								show: true,
+								readOnly: false
+							},
+							//动态类型切换。show->是否显示该工具，type->这是个数组，启用的动态类型，包括'line'（切换为折线图）, 'bar'（切换为柱状图）, 'stack'（切换为堆叠模式）, 'tiled'（切换为平铺模式）。 
+							magicType: {
+								show: true,
+								type: ['line']
+							},
+							//配置项还原。主要属性是show->是否显示该工具。 
+							restore: {
+								show: true
+							},
+							//这个工具可以把图表保存为图片。里面有些常用的参数，type->保存图片的格式，name->保存文件的名字，backgroundColor->保存图片的背景色，show->是否显示该工具 
+							saveAsImage: {
+								show: true
+							}
+						}
+					},
+					//是否启用拖拽重计算特性，默认关闭(即值为false) 
+					calculable: false,
+					//直角坐标系中横轴数组，数组中每一项代表一条横轴坐标轴，仅有一条时可省略数值    
+					//横轴通常为类目型，但条形图时则横轴为数值型，散点图时则横纵均为数值型
+					xAxis: [{
+						type: 'category', //坐标轴类型，横轴默认为类目型'category'
+						data: ['1月', '2月', '3月', '4月', '5月', '6月', '7月'] //类目型坐标轴文本标签数组，指定label内容。 数组项通常为文本，'\n'指定换行
+					}],
+					//直角坐标系中纵轴数组，数组中每一项代表一条纵轴坐标轴，仅有一条时可省略数值    
+					//纵轴通常为数值型，但条形图时则纵轴为类目型 
+					yAxis: [{
+						type: 'value', //坐标轴类型，纵轴默认为数值型'value'
+						splitArea: { //分隔区域，默认不显示
+							show: true
+						}
+					}],
+					//sereis的数据: 用于设置图表数据之用。series是一个对象嵌套的结构；对象内包含对象
+					series: [{
+						name: '蒸发量', //系列名称，如果启用legend，该值将被legend.data索引相关
+						type: chartType, //图表类型，必要参数！如为空或不支持类型，则该系列数据不被显示。
+						data: [2.0, 4.9, 7.0, 23.2, 25.6, 76.7, 135.6] //系列中的数据内容数组，折线图以及柱状图时数组长度等于所使用类目轴文本标签数组axis.data的长度，并且他们间是一一对应的。数组项通常为数值 
+					}]
+				};
+				return chartOption;
+			};
+			var byId = function(id) {
+				return document.getElementById(id);
+			};
+			var lineChart = echarts.init(byId('lineChart'));
+			// 使用刚指定的配置项和数据显示图表。
+			lineChart.setOption(getOption('line'));
+			var pieChart = echarts.init(byId('pieChart'));
+			// pieChart.setOption(getOption('pie'));
+			// 使用刚指定的配置项和数据显示图表。
+			pieChart.setOption(pieoption);
+		</script>
+	</body>
 
 </html>
