--- a/wisdomCampus/html/studentManage/student-attendanceDetail.html
+++ b/wisdomCampus/html/studentManage/student-attendanceDetail.html
@@ -26,7 +26,7 @@
 
 <body>
     <header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;" id="talkReacordHead">
-        <a @click="muiback" class="mui-icon mui-icon-left-nav mui-pull-left mui-action-back" style="color: white;"></a>
+        <a @tap="muiback" class="mui-icon mui-icon-left-nav mui-pull-left mui-action-back" style="color: white;"></a>
         <h1 class="mui-title" style="color: white;">考勤详情</h1>
         <a class="mui-pull-right" style="color: white;font-size: 17px;margin-top: 10px;">修改</a>
     </header>
