--- a/wisdomCampus/html/studentManage/student-action.html
+++ b/wisdomCampus/html/studentManage/student-action.html
@@ -192,15 +192,15 @@
 		<script src="../../js/utils/mui.poppicker.js"></script>
 		<script src="../../js/vue.min.js"></script>
 		<script src='../../js/lib/vconsole/vconsole.min.js'></script>
-		<script src="../../js/publicProtocol.js"></script>
 		<script src="../../js/utils/store.js"></script>
 		<script src="../../js/utils/storageKeyName.js"></script>
 		<script src="../../js/utils/events.js"></script>
-		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<script src="../../js/utils/utils.js"></script>
 		<script src="../../js/lib/jquery.js"></script>
 		<script src="../../js/utils/mui.pullToRefresh.js"></script>
 		<script src="../../js/utils/mui.pullToRefresh.material.js"></script>
+		<script src="../../js/studentManage/studentManagePermission.js"></script>
+		<script src="../../js/publicProtocol.js"></script>
 		<script src="../../js/studentManage/studentManagePermission.js"></script>
 		<script type="text/javascript">
 			var m$=mui.init()
