--- a/wisdomCampus/html/studentManage/student-attendanceDetail.html
+++ b/wisdomCampus/html/studentManage/student-attendanceDetail.html
@@ -21,6 +21,18 @@
 			font-size: 13px;
 			color: blue;
 		}
+		.liTitle{
+			font-size: 15px;
+			color: #333;
+		}
+		.liDetail{
+			font-size: 14px;
+			color: #666;
+		}
+		.lineCell{
+			height: px;
+			background: #f2f2f2;
+		}
     </style>
 </head>
 
@@ -28,24 +40,24 @@
     <header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;" id="talkReacordHead">
         <a @tap="muiback" class="mui-icon mui-icon-left-nav mui-pull-left mui-action-back" style="color: white;"></a>
         <h1 class="mui-title" style="color: white;">考勤详情</h1>
-        <a class="mui-pull-right" style="color: white;font-size: 17px;margin-top: 10px;">修改</a>
+        <a class="mui-pull-right" style="color: white;font-size: 14px;margin-top: 12px;">修改</a>
     </header>
     <div class="mui-content" id="attendanceDetialData">
         <ul class="mui-table-view">
             <li class="mui-table-view-cell" v-for='(attendanceModel,index) in actionDetialArray'>
                 <a v-if='index==4'>
-                    <div class="mui-media-body">
+                    <div class="mui-media-body liTitle">
                         {{attendanceModel.attendanceDetialTitle}}
                     </div>
-                    <p style="margin-top: 5px;padding: 5px 5px 5px;">{{attendanceModel.attendanceDetialValue}}</p>
+                    <p class="liDetail" style="margin-top: 5px;padding: 5px 5px 5px;">{{attendanceModel.attendanceDetialValue}}</p>
                 </a>
                 <a v-else=''>
-                    <p class="mui-pull-right">{{attendanceModel.attendanceDetialValue}}</p>
-                    <div class="mui-media-body">
+                    <p class="mui-pull-right liDetail">{{attendanceModel.attendanceDetialValue}}</p>
+                    <div class="mui-media-body liTitle">
                         {{attendanceModel.attendanceDetialTitle}}
                     </div>
                 </a>
-                <a v-if='index==2||index==4||index==6' style="background: gray;height: 10px;margin-top: 13px;"></a>
+                <a class="lineCell" v-if='index==2||index==4||index==6' style="margin-top: 13px;"></a>
             </li>
         </ul>
     </div>
